First look of a move

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,20 @@
-<h1>
-  {{title}}
-</h1>
+<div class="move">
+  <div class="trigger">
+    When you do something under fire, or dig in to endure fire
+  </div>
+  <div class="connector"><i class="icon-flow-line"></i></div>
+  <div class="randomizer">
+    roll+cool
+  </div>
+  <div class="randomizer-results">
+    <div class="randomizer-result success">
+      On a 10+, you do it
+    </div>
+    <div class="randomizer-result partialsuccess">
+       On a 7–9, you flinch, hesitate, or stall: the MC can offer you a worse outcome, a hard bargain, or an ugly choice. 
+    </div>
+    <div class="randomizer-result failure">
+      On a miss, be prepared for the worst.
+    </div>
+  </div>
+</div>
