Use material to style the moves

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,28 +1,31 @@
 .move {
-    margin: 0 auto;
+    margin: 20px auto;
     width: 50%;
 }
 
-.move .trigger,
-.move .randomizer,
-.move .randomizer-result {
-    text-align: center;
-    border: 1px solid black;
-    padding: 10px;
-}
-
-.move .connector {
-    text-align: center;
-}
-
-.move .connector i {
-    font-size: 1.5em;
-}
-
-.move .randomizer-results {
+.randomizer .mat-card-content,
+.branch .mat-card-content {
     display: flex;
 }
 
-.move .randomizer-result {
-    width: 33%;
+.branch .mat-card {
+    width: 50%;
+}
+
+.randomizer .mat-card {
+    width: 40%;
+}
+
+.randomizer .failure {
+    width: 20%;
+}
+
+.success {
+    background: #DFF0D8;
+}
+.partial {
+    background: #FCF8E3;
+}
+.failure {
+    background: #F2DEDE;
 }
