--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<ap-move *ngFor='let move of moves' [move]='move'></ap-move>
+<!--
 <div class="move">
   <md-card>
     <md-card-title>When you do something under fire, or dig in to endure fire</md-card-title>
@@ -161,4 +163,4 @@ assurance, corroboration, or evidence first
     <md-card-subtitle>Action</md-card-subtitle>
     <md-card-content>Whenever you act on one of the MC’s answers, take +1</md-card-content>
   </md-card>
-</div>
+</div>-->
