--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,17 +1,3 @@
-.move {
-    margin: 20px auto;
-    width: 50%;
-}
-
-.randomizer .mat-card-content,
-.branch .mat-card-content {
+:host {
     display: flex;
-}
-
-.branch .mat-card {
-    width: 50%;
-}
-
-.randomizer .mat-card {
-    width: 40%;
 }
