--- a/src/app/move/move.component.html
+++ b/src/app/move/move.component.html
@@ -1,6 +1,7 @@
 <h2>{{move.name}}</h2>
 <ng-container *ngFor="let step of move.steps" [ngSwitch]="step.type">
   <ap-move-action       *ngSwitchCase="'action'"      [data]="step"></ap-move-action>
+  <ap-move-branch       *ngSwitchCase="'branch'"      [data]="step"></ap-move-branch>
   <ap-move-randomizer   *ngSwitchCase="'randomizer'"  [data]="step"></ap-move-randomizer>
   <ap-move-trigger      *ngSwitchCase="'trigger'"     [data]="step"></ap-move-trigger>
 </ng-container>
