Add details to randomizer

--- a/src/app/move/action/action.component.html
+++ b/src/app/move/action/action.component.html
@@ -1,3 +1,6 @@
-<p>
-  action works!
-</p>
+<md-card>
+  <md-card-subtitle>Action</md-card-subtitle>
+  <md-card-content>
+    <markdown-to-html>{{ data.text }}</markdown-to-html>
+  </md-card-content>
+</md-card>
