--- a/src/app/move/branch/branch.component.html
+++ b/src/app/move/branch/branch.component.html
@@ -1,5 +1,5 @@
 <md-card>
-  <md-card-subtitle>Randomizer</md-card-subtitle>
+  <md-card-subtitle>Branch</md-card-subtitle>
   <md-card-content>{{ data.text }}</md-card-content>
   <md-card *ngFor="let branch of data.branches">
     <markdown-to-html>{{ branch }}</markdown-to-html>
