--- a/src/app/move/randomizer/randomizer.component.html
+++ b/src/app/move/randomizer/randomizer.component.html
@@ -1,10 +1,9 @@
 <md-card>
   <md-card-subtitle>Randomizer</md-card-subtitle>
   <md-card-content>{{ data.text }}</md-card-content>
-  <md-card *ngFor="let result of data.results" [class]="result.name">
-    <markdown-to-html>{{ result.text }}</markdown-to-html>
-  </md-card>
-  <md-card-content class="details">
-    <markdown-to-html>{{ data.details }}</markdown-to-html>
-  </md-card-content>
+  <md-card *ngFor="let result of data.results" 
+           [class]="result.name"
+           [innerHTML]="result.text|MarkdownToHtml"></md-card>
+  <md-card-content class="details"
+                   [innerHTML]="data.details|MarkdownToHtml"></md-card-content>
 </md-card>
