--- a/src/app/move/trigger/trigger.component.html
+++ b/src/app/move/trigger/trigger.component.html
@@ -1,4 +1,4 @@
 <md-card>
   <md-card-subtitle>Trigger</md-card-subtitle>
-  <md-card-content>{{ data.text }}</md-card-content>
+  <md-card-content [innerHTML]="data.text|MarkdownToHtml"></md-card-content>
 </md-card>
